--- a/www/index.html
+++ b/www/index.html
@@ -35,20 +35,53 @@
 				I'm passionate about technology. I've always been
 				fascinated by it, like when I realised that it's
 				actually kind of crazy how video AND audio can
-				be transported with an HDMI cable... when I was
-				sixteen :')
+				be transported with an HDMI cable... I am likewise
+				just as starstruck by the wonders and intricacies
+				of *nix systems as well as protocols and specifications
+				that exist around the systems we use everyday.
 			</p>
 			<br>
 			<p>
-				I learnt about networking in school. The rest of
-				my skills that are applicable in the field are
-				mostly self-taught. I started really getting into
-				Linux around the age of seventeen and I got to
-				learn a whole lot about AV during my internship
-				in school that lasted for 3 months or so.
+				I have a <i>lot</i> to learn still&ndash; in fact,
+				I am never going to stop learning about things.
+				This makes learning resources a significant necessity
+				for me, and I'd like to share some with you, among
+				other links in no particular order.
 			</p>
-			<br>
-			<p>Todo list:</p>
+			<h2>Resources</h2>
+			<h3>People</h3>
+			<ul>
+				<li><a href="https://davebucklin.com/" rel="external">Dave Bucklin</a>
+					&ndash; <a href="https://davebucklin.com/feed.xml" rel="external">RSS</a></li>
+				<li><a href="http://ratfactor.com/" rel="external">Dave Gauer</a>
+					&ndash; <a href="http://ratfactor.com/atom.xml" rel="external">RSS</a></li>
+				<li><a href="https://localghost.dev/" rel="external">Sophie Koonin</a>
+					&ndash; <a href="https://localghost.dev/rss/" rel="external">RSS</a></li>
+				<li><a href="https://www.nyabla.net/" rel="external">Nela</a>
+					&ndash; <a href="https://www.nyabla.net/blog/atom.xml" rel="external">RSS</a></li>
+				<li><a href="https://www.datagubbe.se/" rel="external">Carl Svensson</a>
+					&ndash; <a href="https://www.datagubbe.se/atom.xml" rel="external">RSS</a></li>
+				<li><a href="https://kielthecoder.com/" rel="external">Kiel Lofstrand</a></li>
+				<li><a href="http://www.vissing.dk/" rel="external">Jesper Vissing Laursen</a></li>
+				<li><a href="http://www.columbia.edu/~hauben/index.html" rel="external">Michael Hauben</a></li>
+				<li><a href="https://www.hawkins.io/" rel="external">Adam Hawkins</a></li>
+			</ul>
+			<h3>Miscellaneous</h3>
+			<ul>
+				<li><a href="http://tldp.org/" rel="external">
+					The Linux Documentation Project</a></li>
+				<li><a href="https://developer.mozilla.org/" rel="external">
+					<abbr title="Mozilla Developer Network">MDN</abbr> Web Docs</a></li>
+				<li><a href="https://planet.gnu.org/" rel="external">
+					Planet <abbr title="GNU's Not Unix!">GNU</abbr></a></li>
+				<li><a href="https://www.kernel.org/" rel="external">
+					The Linux Kernel</a></li>
+				<li><a href="https://www.rfc-editor.org/" rel="external">
+					<abbr title="Request For Comments">RFC</abbr></a></li>
+				<li><a href="https://www.w3.org/TR/?status%5B0%5D=standard" rel="external">
+					<abbr title="World Wide Web Consortium">W3C</abbr></a></li>
+			</ul>
+			<h2>A little todo list</h2>
 			<ul>
 				<li>Extron button</li>
 				<li>Coding lang buttons</li>
@@ -102,11 +135,13 @@
 			<ul>
 				<li><a href="https://github.com/raggebatman" rel="external">GitHub</a></li>
 				<li><a href="https://steamcommunity.com/id/raggebatman" rel="external">Steam</a></li>
+				<li><a href="https://steamdb.info/calculator/76561198274431856/?cc=eu" rel="external">SteamDB</a></li>
 				<li><a href="https://en.pronouns.page/@raggebatman" rel="external">Pronouns</a></li>
 				<li><a href="https://github.com/raggebatman/website" rel="external">Source code</a></li>
 			</ul>
 			<p>
-				I've got an RSS feed available <a href="feed.xml">here</a>.
+				I've got an RSS feed <a href="feed.xml">here</a>
+				where I write about random stuff that interests me.
 			</p>
 			<!--
 				Waiting for verification on these ones :P
