--- a/www/index.html
+++ b/www/index.html
@@ -8,229 +8,46 @@
 		<meta name="robots" content="index, follow">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="favicon.ico">
-		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<header>
-			<h1>Hi, I'm Ragge!</h1>
-		</header>
-		<main>
-			<fieldset>
-				<legend>Contact</legend>
-				<p>
-					You're welcome to reach out to me.
-				</p>
-				<ul>
-					<li>E-mail: <a href="mailto:me@ragge.gay">me@<wbr>ragge.gay</a></li>
-					<li>PGP key: <a href="public.key">public.key</a></li>
-				</ul>
-			</fieldset>
+		<h2>ragge.gay</h2>
+		<p>
+		Hello! This place is undergoing some changes (again...)<br>
+		It might be a while before I get around to updating it.<br>
+		I've preserved the button artwork on the GitHub if you want it still.
+		</p>
+		<fieldset>
+			<legend>Contact</legend>
 			<p>
-				I'm a nerd. I was born in 2003 and grew up in Sweden where I
-				still live today. Moved out and started working full-time within
-				the <abbr title="Audiovisual">AV</abbr>-industry at the age of 18.
-				I've been programming since I was 14.
+				You're welcome to reach out to me.
 			</p>
-			<p>
-				I'm passionate about technology. I've always been
-				fascinated by it, like when I realised that it's
-				actually kind of crazy how video AND audio can
-				be transported with an HDMI cable... I am likewise
-				just as starstruck by the wonders and intricacies
-				of *nix systems as well as protocols and specifications
-				that exist around the systems we use everyday.
-			</p>
-			<br>
-			<p>
-				I have a <i>lot</i> to learn still&ndash; in fact,
-				I am never going to stop learning about things.
-				This makes learning resources a significant necessity
-				for me, and I'd like to share some with you, among
-				other links in no particular order.
-			</p>
-			<h2>Resources</h2>
-			<h3>People</h3>
 			<ul>
-				<li><a href="https://davebucklin.com/" rel="external">Dave Bucklin</a>
-					&ndash; <a href="https://davebucklin.com/feed.xml" rel="external">RSS</a></li>
-				<li><a href="http://ratfactor.com/" rel="external">Dave Gauer</a>
-					&ndash; <a href="http://ratfactor.com/atom.xml" rel="external">RSS</a></li>
-				<li><a href="https://localghost.dev/" rel="external">Sophie Koonin</a>
-					&ndash; <a href="https://localghost.dev/rss/" rel="external">RSS</a></li>
-				<li><a href="https://www.nyabla.net/" rel="external">Nela</a>
-					&ndash; <a href="https://www.nyabla.net/blog/atom.xml" rel="external">RSS</a></li>
-				<li><a href="https://www.datagubbe.se/" rel="external">Carl Svensson</a>
-					&ndash; <a href="https://www.datagubbe.se/atom.xml" rel="external">RSS</a></li>
-				<li><a href="https://kielthecoder.com/" rel="external">Kiel Lofstrand</a></li>
-				<li><a href="http://www.vissing.dk/" rel="external">Jesper Vissing Laursen</a></li>
-				<li><a href="http://www.columbia.edu/~hauben/index.html" rel="external">Michael Hauben</a></li>
-				<li><a href="https://www.hawkins.io/" rel="external">Adam Hawkins</a></li>
+				<li>E-mail: <a href="mailto:me@ragge.gay">me@<wbr>ragge.gay</a></li>
+				<li>PGP key: <a href="public.key">public.key</a></li>
 			</ul>
-			<h3>Miscellaneous</h3>
-			<ul>
-				<li><a href="http://tldp.org/" rel="external">
-					The Linux Documentation Project</a></li>
-				<li><a href="https://developer.mozilla.org/" rel="external">
-					<abbr title="Mozilla Developer Network">MDN</abbr> Web Docs</a></li>
-				<li><a href="https://planet.gnu.org/" rel="external">
-					Planet <abbr title="GNU's Not Unix!">GNU</abbr></a></li>
-				<li><a href="https://www.kernel.org/" rel="external">
-					The Linux Kernel</a></li>
-				<li><a href="https://www.rfc-editor.org/" rel="external">
-					<abbr title="Request For Comments">RFC</abbr></a></li>
-				<li><a href="https://www.w3.org/TR/?status%5B0%5D=standard" rel="external">
-					<abbr title="World Wide Web Consortium">W3C</abbr></a></li>
-			</ul>
-			<h2>A little todo list</h2>
-			<ul>
-				<li>Extron button</li>
-				<li>Coding lang buttons</li>
-				<ul>
-					<li>Ruby</li>
-					<li>JS, TS</li>
-					<li>PHP</li>
-					<li>C#</li>
-					<li>Lua</li>
-					<li>Python</li>
-					<li>HTML, CSS, Sass</li>
-					<li>Bash</li>
-				</ul>
-				<li>OS buttons</li>
-				<ul>
-					<li>Pop!_OS</li>
-					<li>Ubuntu</li>
-					<li>Windows XP, Vista, 10, 11</li>
-					<li>XCP-ng</li>
-					<li>pfSense, OPNsense</li>
-					<li>FreeBSD</li>
-				</ul>
-				<li>Rework Tutanota button to Tutamail?</li>
-			</ul>
-		</main>
-		<aside>
-			<p>Webrings! Yay!</p>
-			<fieldset>
-				<legend>
-					<span>The Geekring</span>
-					<a href="http://geekring.net/" rel="external" target="_blank">&#x2197;</a>
-				</legend>
-				<div>
-					<a href="http://geekring.net/site/236/previous" rel="external">Previous</a>
-					<a href="http://geekring.net/site/236/random" rel="external">Random</a>
-					<a href="http://geekring.net/site/236/next" rel="external">Next</a>
-				</div>
-			</fieldset>
-			<fieldset>
-				<legend>
-					<span>The Silly City</span>
-					<a href="http://silly.city/" rel="external" target="_blank">&#x2197;</a>
-				</legend>
-				<div>
-					<a href="https://silly.city/prev?user=ragge" rel="external">Previous</a>
-					<a href="https://silly.city/random" rel="external">Random</a>
-					<a href="https://silly.city/next?user=ragge" rel="external">Next</a>
-				</div>
-			</fieldset>
-			<p>Moar links</p>
-			<ul>
-				<li><a href="https://github.com/raggebatman" rel="external">GitHub</a></li>
-				<li><a href="https://steamcommunity.com/id/raggebatman" rel="external">Steam</a></li>
-				<li><a href="https://steamdb.info/calculator/76561198274431856/?cc=eu" rel="external">SteamDB</a></li>
-				<li><a href="https://en.pronouns.page/@raggebatman" rel="external">Pronouns</a></li>
-				<li><a href="https://github.com/raggebatman/website" rel="external">Source code</a></li>
-			</ul>
-			<p>
-				I've got an RSS feed <a href="feed.xml">here</a>
-				where I write about random stuff that interests me.
-			</p>
-			<!--
-				Waiting for verification on these ones :P
-
-			<fieldset>
-				<legend>
-					<span>The Cuddler Webring</span>
-					<a href="https://cuddler-webring.netlify.app/" rel="external" target="_blank">&#x2197;</a>
-				</legend>
-				<div>
-					<a href="https://cuddler-webring.netlify.app/ragge/previous" rel="external">Previous</a>
-					<a href="https://cuddler-webring.netlify.app/ragge/next" rel="external">Next</a>
-				</div>
-			</fieldset>
-			<fieldset>
-				<legend>
-					<span>The Queer Coded Webring</span>
-					<a href="https://isaacfish.neocities.org/webring/" rel="external" target="_blank">&#x2197;</a>
-				</legend>
-				<div>
-					<a href="https://isaacfish.neocities.org/webring/X.html">Previous</a>
-					<a href="https://isaacfish.neocities.org/webring/Y.html">Next</a>
-				</div>
-			</fieldset>
-			-->
-		</aside>
-		<div id="buttons">
+		</fieldset>
+		<h3>Webrings</h3>
+		<fieldset>
+			<legend>
+				<span>The Geekring</span>
+				<a href="http://geekring.net/" rel="external" target="_blank">&#x2197;</a>
+			</legend>
 			<div>
-				<a href="http://ragge.gay/">
-					<img alt="" src="assets/buttons/gay.gif">
-				</a>
-				<img alt="" src="assets/buttons/sissy.gif">
-				<img alt="" src="assets/buttons/femboy.gif">
-				<a href="http://geekring.net/" rel="external">
-					<img alt="" src="assets/buttons/geekring.gif">
-				</a>
-				<a href="https://silly.city/" rel="external">
-					<img alt="" src="assets/buttons/silly.gif">
-				</a>
-				<a href="https://cuddler-webring.netlify.app/" rel="external">
-					<img alt="" src="assets/buttons/cuddler.gif">
-				</a>
-				<a href="https://isaacfish.neocities.org/webring/" rel="external">
-					<img alt="" src="assets/buttons/queer.gif">
-				</a>
-				<a href="https://localghost.dev/" rel="external">
-					<img alt="" src="assets/buttons/localghost.gif">
-				</a>
-				<a href="https://woodencrow64.neocities.org/" rel="external">
-					<img alt="" src="assets/buttons/woodencrow.gif">
-				</a>
-				<a href="http://ratfactor.com/" rel="external">
-					<img alt="" src="assets/buttons/ratfactor.gif">
-				</a>
-				<a href="https://nyabla.net/" rel="external">
-					<img alt="" src="assets/buttons/nyabla.gif">
-				</a>
-				<a href="https://citrons.xyz/a/memetic-apioform-page.html" rel="external">
-					<img alt="" src="assets/buttons/apiopage.gif">
-				</a>
-				<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" rel="external">
-					<img alt="" src="assets/buttons/rolling.gif">
-				</a>
-				<img alt="" src="assets/buttons/tutanota.gif">
-				<img alt="" src="assets/buttons/debian.gif">
-				<img alt="" src="assets/buttons/arch.gif">
-				<img alt="" src="assets/buttons/fedora.gif">
-				<img alt="" src="assets/buttons/amx.gif">
-				<img alt="" src="assets/buttons/crestron.gif">
-				<img alt="" src="assets/buttons/kramer.gif">
-				<img alt="" src="assets/buttons/qsys.gif">
-				<img alt="" src="assets/buttons/dante.gif">
-				<img alt="" src="assets/buttons/avixa.gif">
-				<img alt="" src="assets/buttons/sennheiser.gif">
-				<img alt="" src="assets/buttons/bose.gif">
-				<img alt="" src="assets/buttons/construction.gif">
-				<a href="assets/buttons/template.pdn">
-					<img alt="" src="assets/buttons/template.gif">
-				</a>
+				<a href="http://geekring.net/site/236/previous" rel="external">Previous</a>
+				<a href="http://geekring.net/site/236/random" rel="external">Random</a>
+				<a href="http://geekring.net/site/236/next" rel="external">Next</a>
 			</div>
-		</div>
-		<footer>
-			<p>
-				The content of this page is available under the
-				<a href="LICENSE.txt">CC BY-SA 4.0</a> license.
-			</p>
-			<p>
-				This page should adapt to your browser's theme preference.
-			</p>
-		</footer>
+		</fieldset>
+		<fieldset>
+			<legend>
+				<span>The Silly City</span>
+				<a href="http://silly.city/" rel="external" target="_blank">&#x2197;</a>
+			</legend>
+			<div>
+				<a href="https://silly.city/prev?user=ragge" rel="external">Previous</a>
+				<a href="https://silly.city/random" rel="external">Random</a>
+				<a href="https://silly.city/next?user=ragge" rel="external">Next</a>
+			</div>
+		</fieldset>
 	</body>
 </html>
