--- a/www/index.html
+++ b/www/index.html
@@ -2,52 +2,100 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>raggebatman</title>
-		<meta name="description" content="Just someone's personal website.">
-		<meta name="color-scheme" content="light dark">
-		<meta name="robots" content="index, follow">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" href="favicon.ico">
+
+		<title>ragge.gay</title>
+		<meta name="description" content="Just someone's personal website.">
+
+		<meta name="robots" content="index, follow">
+
+		<link rel="stylesheet" href="/normalize.css">
+		<link rel="stylesheet" href="/style.css">
+		<meta name="color-scheme" content="light">
+
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#b91d47">
+		<meta name="msapplication-TileColor" content="#b91d47">
+		<meta name="theme-color" content="#b91d47">
 	</head>
 	<body>
-		<h2>ragge.gay</h2>
-		<p>
-		Hello! This place is undergoing some changes (again...)<br>
-		It might be a while before I get around to updating it.<br>
-		I've preserved the button artwork on the GitHub if you want it still.
-		</p>
-		<fieldset>
-			<legend>Contact</legend>
+		<header>
 			<p>
-				You're welcome to reach out to me.
+				hi, hello
 			</p>
 			<ul>
-				<li>E-mail: <a href="mailto:me@ragge.gay">me@<wbr>ragge.gay</a></li>
-				<li>PGP key: <a href="public.key">public.key</a></li>
+				<li>e-mail: <a href="mailto:me@ragge.gay">me@ragge.gay</a></li>
+				<li>pgp: <a href="public.key">public.key</a></li>
 			</ul>
-		</fieldset>
-		<h3>Webrings</h3>
-		<fieldset>
-			<legend>
-				<span>The Geekring</span>
-				<a href="http://geekring.net/" rel="external" target="_blank">&#x2197;</a>
-			</legend>
+		</header>
+		<main>
+			<p>
+				i'm a nerdy enby who always feels a little out of place
+			</p>
+			<p>
+				some of the things that i like:
+				music, biking, skiing, travelling,
+				gaming, tabletop games, card games,
+				airplanes, boats, public transport,
+				nature, photography, graphic design,
+				good food, good beer, coffee, tea,
+				my friends, my family, my coworkers,
+				programming, website development, linux,
+				system architecture, system administration,
+				telecommunications networks,
+				commercial audio-, video- and lighting technology/applications,
+				building data racks, troubleshooting, reading documentation,
+				writing documentation, protocols,
+				crossdressing, queer people, life,
+				and talking about things i like
+			</p>
+			<p>
+				some of the things that i don't like:
+				whipped cream and fluffy cake bases, bigots,
+				being allergic to cats
+			</p>
+			<p>
+				check out my <a href="stuff/">stuff/</a>
+			</p>
+		</main>
+		<footer class="center">
+			<p>
+				surf the web below
+			</p>
 			<div>
-				<a href="http://geekring.net/site/236/previous" rel="external">Previous</a>
-				<a href="http://geekring.net/site/236/random" rel="external">Random</a>
-				<a href="http://geekring.net/site/236/next" rel="external">Next</a>
+				<div>
+					<span>the geekring</span>
+					<a href="http://geekring.net/" rel="external" target="_blank">(link)</a>
+					<br>
+					<a href="http://geekring.net/site/236/previous" rel="external">previous</a>
+					<a href="http://geekring.net/site/236/random" rel="external">random</a>
+					<a href="http://geekring.net/site/236/next" rel="external">next</a>
+				</div>
 			</div>
-		</fieldset>
-		<fieldset>
-			<legend>
-				<span>The Silly City</span>
-				<a href="http://silly.city/" rel="external" target="_blank">&#x2197;</a>
-			</legend>
 			<div>
-				<a href="https://silly.city/prev?user=ragge" rel="external">Previous</a>
-				<a href="https://silly.city/random" rel="external">Random</a>
-				<a href="https://silly.city/next?user=ragge" rel="external">Next</a>
+				<div>
+					<span>the silly city</span>
+					<a href="http://silly.city/" rel="external" target="_blank">(link)</a>
+					<br>
+					<a href="https://silly.city/prev?user=ragge" rel="external">previous</a>
+					<a href="https://silly.city/random" rel="external">random</a>
+					<a href="https://silly.city/next?user=ragge" rel="external">next</a>
+				</div>
 			</div>
-		</fieldset>
+			<div>
+				<a href="shen-qianqiu.jpg">
+					<img
+					src="shen-qianqiu.svg"
+					alt="Engraving by Shen Qianqiu during the Ming Dynasty"
+					style="max-width: 200px;">
+				</a>
+				<p>
+					i think it would be funny to get this as a tattoo
+				</p>
+			</div>
+		</footer>
 	</body>
 </html>
